--- a/_posts/2019-07-08-the-us-narrative-today.html
+++ b/_posts/2019-07-08-the-us-narrative-today.html
@@ -2611,107 +2611,107 @@ stories:
   domain: http://www.thevillager.com/
   link: https://www.thevillager.com/2019/07/whiskey-town-wallet-removal/
 images:
-- name: old-house-oldhouse-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-circuit.jpg
-- name: aws-s3-stories-cargo-ship-on-sea-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-copper-circuit.jpg
-- name: store-on-corner-store-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-internet-numbers.jpg
-- name: white-house-lawn-white-house-lawn-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-blue-circuit.jpg
-- name: old-cabin-oldcabin-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-dark-rain.jpg
-- name: castle-wall-DSC-0067-sand-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-sand-paper.JPG
-- name: machine-road-machine-road-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-alien-goggles.jpg
-- name: old-school-house-old-schoolhouse-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-really-hot.jpg
-- name: aws-s3-stories-cityscape-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cityscape-dali-three.jpg
-- name: fence-fence-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-crabapple.jpg
-- name: stories-flower-barbed-wire-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-flower-barbed-wire-clean-view.jpg
-- name: old-church-oldchurch-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dark-soul.jpg
+- name: white-house-whitehouse-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-ww2-dresden.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-dali-two.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-dali-two.JPG
+- name: old-granary-field-oldhouse-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-blue-electricity.jpg
+- name: oldroad-old-road-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-marcel-duchamp.jpg
+- name: wind-mills-windmills-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-blue-electricity.jpg
+- name: death-valley-death-valley-national-park-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dark-dali.jpg
+- name: wind-mills-windmills-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-aqua.jpg
+- name: store-on-corner-oldcabin-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-blue-brush.jpg
+- name: meadowbutterfly-meadow-butterfly-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-yellow-paper.jpg
+- name: nazi-invasion-DSC_0033.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0033.jpg
+- name: art-museum-art-museum-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-emily-carr.jpg
+- name: old-building-clouds-with-tree-norman-rockwell-ruby-bridges.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-building-clouds-with-tree-norman-rockwell-ruby-bridges.jpg
+- name: hollywood-building-hollywood-building-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-yellow-paper.jpg
+- name: blossombar-yellow-collage-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-collage-file-00-00-24-99.jpg
 - name: sand-hand-sand-hand-colorful-dream.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-colorful-dream.jpg
-- name: windowmountain-window-mountain-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-graham-sutherland.jpg
-- name: store-on-corner-store-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-constitution.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-kand-two.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-gan-vogh.jpg
-- name: oldhouse-granaryfield-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-satan-red.jpg
-- name: old-school-house-old-schoolhouse-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-granite.jpg
-- name: yosemite-yosemite-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-granite.jpg
-- name: oldtrain-oldtrain-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-feed-people.jpg
-- name: subway-subway-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-marcel-duchamp.jpg
-- name: downtheline-downtheline-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-gred-mash.jpg
-- name: fence-fence-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-kandinsky-bv.jpg
-- name: beach-clouds-lifeguard-beachclouds-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-mucha-mult.jpg
-- name: school-clouds-church-clouds-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dali-three.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-neo-instinct.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-neo-instinct.JPG
+- name: castle-on-hill-castle-on-hill-edinburgh-purple-pond.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-purple-pond.JPG
+- name: downtheline-downtheline-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-purp-paper.jpg
+- name: oldroad-old-road-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-bright-sand.jpg
+- name: powerlines-power-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-aqua.jpg
+- name: subway-subway-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-space-pizza.jpg
+- name: lincoln-memorial-lincolnmemorial-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-ww2-dresden.jpg
+- name: machine-road-machine-road-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-umberto-bocc.jpg
+- name: capital-battle-capitolbattle-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-sunday.jpg
+- name: birdhouse-birdhouse-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-rainbow-festival.jpg
+- name: crow_dark_pigeon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_pigeon.jpg
+- name: oldhotel-oldhotel-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-umberto-bocc.jpg
+- name: san-francisco-street-view-san-francisco-street-view-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-gan-vogh.jpg
+- name: old-door-lock-old-door-lock-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-light-dali.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-ww2-dresden.jpg
+- name: aws-s3-stories-new-68-158-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-68-158-800-500-0-max-0-1--1.jpg
+- name: gypsymosaic-gypsy-eyes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes.jpg
+- name: ellis-island-ellis-island-room-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dry-skin.jpg
+- name: old-cabin-oldcabin-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-cinnamon-rolls.jpg
+- name: oldtrain-oldtrain-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-blue-granite.jpg
+- name: art-museum-art-museum-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-diego-rivera1.jpg
+- name: paris-paris-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-graham-sutherland.jpg
+- name: border-fence-border-fence-on-hill-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-clean-view.jpg
+- name: flower-barbed-wire-flower-barbed-wire-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-crunch-paper.jpg
+- name: victoria-victoria-corner-hotel-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-atari-asteroids.jpg
+- name: berlinwall-DSC-0084-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-gan-vogh.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
+- name: school-clouds-church-clouds-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-bright-sand.jpg
+- name: status-berlin-status-berlin-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-cinnamon-rolls.jpg
+- name: store-on-corner-store-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-rainbow-festival.jpg
+- name: christianity-christianity-under-construction-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-diego-rivera1.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dali-two.jpg
+- name: razorwire-DSC-0080-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-post-modern.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit.jpg
+- name: old-church-oldchurch-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dark-soul.jpg
 - name: walled-garden-walled-garden-blue-granite.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-blue-granite.jpg
-- name: old-door-lock-old-door-lock-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-green-zuma.jpg
-- name: berlinwall-DSC-0084-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-blue-granite.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-neo-instinct.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-oily-mcoilface.jpg
-- name: razorcliff-razorcliff-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-neo-instinct.jpg
-- name: oldcabin-oldcabin-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-purple-storm.jpg
-- name: locked-up-steam-lock-up-steam-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-circuit-3.jpg
-- name: wind-mills-windmills-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-alien-goggles.jpg
-- name: old-school-house-old-schoolhouse-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-gred-mash.jpg
-- name: mosaic-face-mosaic-face-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-matrix.jpg
-- name: bluelake-creativity-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-creativity-file-00-01-17-38.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-ww2-dresden.jpg
-- name: miamibeach-miamibeach-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-spagetti-accident.jpg
-- name: death-valley-death-valley-national-park-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-post-modern.jpg
-- name: old-barn-old-barn-1500-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-clean-view.jpg
-- name: abe-lincoln-one-yellow-paper-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-paper-file-00-00-00-00.jpg
-- name: old-barn-old-barn-1500-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-blue-granite.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-space-pizza.jpg
-- name: meadowbutterfly-meadow-butterfly-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-umberto-bocc.jpg
-- name: crow_mucha_mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_mucha_mult.jpg
-- name: windowmountain-window-mountain-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-spagetti-accident.jpg
-- name: oldhousecars-house-old-cars-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-mucha-mult.jpg
-- name: paris-paris-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-alien-goggles.jpg
-- name: statue-of-liberty-front-view-statueofliberty-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-far-away.jpg
 ---
 Mom And Daughter Are Acting Together.&nbsp;Virginia Traffic Laws And Why You Might Need An Attorney.&nbsp;Freeform Supports Halle Bailey's Ariel Casting Amid Backlash.&nbsp;Runners Kick Off 4th Of July With Firecracker Footrace.&nbsp;Winning Numbers Drawn In 'Big Sky Bonus' Game.&nbsp;Lam Says Hong Kong Bill Is 'dead' But Unclear If Demand Met.&nbsp;White Supremacists Step Up Recruiting On College Campuses.&nbsp;Accused Burglar Offers Homeowner Meth Hit.&nbsp;
